--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,3 +1,11 @@
-body {
-  background: pink;
+.square {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+}
+.board {
+  width: 364px;
+  height: 364px;
+  display: flex;
+  flex-wrap: wrap;
 }
