--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,6 +1,7 @@
 .square {
   width: 50px;
   height: 50px;
+  display: flex;
   border: 1px solid black;
 }
 .board {
@@ -10,9 +11,16 @@
   flex-wrap: wrap;
 }
 
+.crown {
+  height: 20px;
+  width: 20px;
+}
+
 .piece {
-  width: 104;
-  height: 52;
-  display: inline-block;
+  width: 104px;
+  height: 52px;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
   background-color: aquamarine;
 }
