cleaned version with two boards and no drag and drop

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -24,3 +24,8 @@
   overflow: hidden;
   background-color: aquamarine;
 }
+#app {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
