--- a/src/client/index.css
+++ b/src/client/index.css
@@ -26,7 +26,19 @@
   border: 1px solid black;
 }
 #app {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 33.33%); 
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.currContainer, .nextContainer {
+  width: 50%;
+  justify-content: space-between;
 }
