--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2,6 +2,7 @@
   width: 50px;
   height: 50px;
   display: flex;
+  flex-wrap: wrap;
   border: 1px solid black;
 }
 .board {
@@ -17,7 +18,7 @@
 }
 
 .piece {
-  width: 104px;
+  width: 102px;
   height: 52px;
   display: flex;
   flex-direction: row;
