--- a/src/client/index.css
+++ b/src/client/index.css
@@ -11,6 +11,7 @@
   height: 364px;
   display: flex;
   flex-wrap: wrap;
+  margin: auto;
 }
 
 .crown {
@@ -43,17 +44,29 @@
 .currContainer,
 .nextContainer {
   width: 50%;
-  justify-content: space-between;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.boardBox {
+  text-align: center;
 }
 
 .kingContainer {
-  width: 75px;
+  width: 90px;
   display: grid;
   grid-template-columns: repeat(2, 50%);
   margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .king {
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
+}
+
+#next4Btn, #queuePieceBtn {
+  margin-top: 10px;
 }
