--- a/src/client/index.css
+++ b/src/client/index.css
@@ -44,8 +44,9 @@
 .currContainer,
 .nextContainer {
   width: 50%;
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
 }
 
